Fixing top offset on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,15 +30,17 @@ $accent-color: rgb(38, 148, 148);
 }
 
 .page-content {
-  margin-top: 60px;
+  margin-top: 92px;
+
+  @media only screen and (min-width: 600px) {
+    margin-top: 48px;
+  }
 }
 
 .site-title {
-  font-size: 2em;
   font-weight: 400;
   letter-spacing: 0px;
   text-decoration: none !important;
-  margin-right: auto;
   transition: 0.3s;
 
   &:hover {
